--- a/report/draw/doc_opening.tex
+++ b/report/draw/doc_opening.tex
@@ -1,8 +1,8 @@
 % Graphic for TeX using PGF
-% Title: D:\INSA\3INFO\PROJETINFO\diagrammes dia\doc_opening.mts
-% Creator: Dia v0.97.2
-% CreationDate: Wed Apr 22 11:03:23 2015
-% For: Utilisateur
+% Title: /home/maximilien/INSA/alambic/report/draw/doc_opening.dia
+% Creator: Dia v0.97.3
+% CreationDate: Wed Apr 29 09:12:52 2015
+% For: maximilien
 % \usepackage{tikz}
 % The following commands are not supported in PSTricks at present
 % We define them conditionally, so when they are implemented,
@@ -43,7 +43,7 @@
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-28.150000\du,6.045000\du){Utilisateur};
+\node at (-28.150000\du,6.345000\du){Utilisateur};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
@@ -56,18 +56,6 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \node at (-11.561250\du,5.350000\du){CompletionProvider};
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-16.300000\du,5.800000\du)--(-16.300000\du,6.200000\du)--(-6.822500\du,6.200000\du)--(-6.822500\du,5.800000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-16.300000\du,5.800000\du)--(-16.300000\du,6.200000\du)--(-6.822500\du,6.200000\du)--(-6.822500\du,5.800000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-16.300000\du,6.200000\du)--(-16.300000\du,6.600000\du)--(-6.822500\du,6.600000\du)--(-6.822500\du,6.200000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-16.300000\du,6.200000\du)--(-16.300000\du,6.600000\du)--(-6.822500\du,6.600000\du)--(-6.822500\du,6.200000\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
@@ -97,52 +85,40 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \node at (-21.156250\du,5.300000\du){Document};
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-23.700000\du,5.750000\du)--(-23.700000\du,6.150000\du)--(-18.612500\du,6.150000\du)--(-18.612500\du,5.750000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-23.700000\du,5.750000\du)--(-23.700000\du,6.150000\du)--(-18.612500\du,6.150000\du)--(-18.612500\du,5.750000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-23.700000\du,6.150000\du)--(-23.700000\du,6.550000\du)--(-18.612500\du,6.550000\du)--(-18.612500\du,6.150000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-23.700000\du,6.150000\du)--(-23.700000\du,6.550000\du)--(-18.612500\du,6.550000\du)--(-18.612500\du,6.150000\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-21.156250\du,6.550000\du)--(-21.156250\du,7.900000\du);
+\draw (-21.156300\du,5.750000\du)--(-21.156300\du,7.100000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-21.156250\du,11.900000\du)--(-21.156250\du,14.937500\du);
+\draw (-21.156300\du,11.100000\du)--(-21.156300\du,14.137500\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-21.506250\du,7.900000\du)--(-21.506250\du,11.900000\du)--(-20.806250\du,11.900000\du)--(-20.806250\du,7.900000\du)--cycle;
+\fill (-21.506300\du,7.100000\du)--(-21.506300\du,11.100000\du)--(-20.806300\du,11.100000\du)--(-20.806300\du,7.100000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-21.506250\du,7.900000\du)--(-21.506250\du,11.900000\du)--(-20.806250\du,11.900000\du)--(-20.806250\du,7.900000\du)--cycle;
+\draw (-21.506300\du,7.100000\du)--(-21.506300\du,11.100000\du)--(-20.806300\du,11.100000\du)--(-20.806300\du,7.100000\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-11.561250\du,6.600000\du)--(-11.561250\du,11.050000\du);
+\draw (-11.561300\du,5.800000\du)--(-11.561300\du,10.250000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-11.561250\du,14.050000\du)--(-11.561250\du,14.900000\du);
+\draw (-11.561300\du,13.250000\du)--(-11.561300\du,14.100000\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-11.911250\du,11.050000\du)--(-11.911250\du,14.050000\du)--(-11.211250\du,14.050000\du)--(-11.211250\du,11.050000\du)--cycle;
+\fill (-11.911300\du,10.250000\du)--(-11.911300\du,13.250000\du)--(-11.211300\du,13.250000\du)--(-11.211300\du,10.250000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-11.911250\du,11.050000\du)--(-11.911250\du,14.050000\du)--(-11.211250\du,14.050000\du)--(-11.211250\du,11.050000\du)--cycle;
+\draw (-11.911300\du,10.250000\du)--(-11.911300\du,13.250000\du)--(-11.211300\du,13.250000\du)--(-11.211300\du,10.250000\du)--cycle;
 \pgfsetlinewidth{0.100000\du}
 \pgfsetbuttcap
 \pgfsetdash{}{0pt}
@@ -162,7 +138,7 @@
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-20.250000\du,9.250000\du){Analyse du document};
+\node[anchor=west] at (-19.950000\du,8.350000\du){Analyse du document};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetbuttcap
 \pgfsetdash{}{0pt}
@@ -170,15 +146,24 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{dialinecolor}
 % was here!!!
-\pgfsetarrowsstart{latex}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-12.200000\du,11.650000\du)--(-20.200000\du,11.650000\du);
+\draw (-12.250000\du,11.000000\du)--(-20.250000\du,11.000000\du);
 }
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-12.250000\du,11.000000\du)--(-20.250000\du,11.000000\du);
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\pgfsetbuttcap
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-13.050000\du,11.250000\du)--(-12.250000\du,11.000000\du)--(-12.250000\du,11.000000\du);
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-16.800000\du,11.200000\du){Envoi des labels};
+\node at (-16.350000\du,10.50000\du){Envoi des données};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
