--- a/report/draw/filtering_completion.tex
+++ b/report/draw/filtering_completion.tex
@@ -1,8 +1,8 @@
 % Graphic for TeX using PGF
-% Title: D:\INSA\3INFO\PROJETINFO\diagrammes dia\filtering_completion.mts
-% Creator: Dia v0.97.2
-% CreationDate: Wed Apr 22 11:16:14 2015
-% For: Utilisateur
+% Title: /home/maximilien/INSA/alambic/report/draw/filtering_completion.dia
+% Creator: Dia v0.97.3
+% CreationDate: Wed Apr 29 09:04:35 2015
+% For: maximilien
 % \usepackage{tikz}
 % The following commands are not supported in PSTricks at present
 % We define them conditionally, so when they are implemented,
@@ -56,18 +56,6 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
 \node at (-16.561250\du,5.350000\du){CompletionProvider};
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-21.300000\du,5.800000\du)--(-21.300000\du,6.200000\du)--(-11.822500\du,6.200000\du)--(-11.822500\du,5.800000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-21.300000\du,5.800000\du)--(-21.300000\du,6.200000\du)--(-11.822500\du,6.200000\du)--(-11.822500\du,5.800000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-21.300000\du,6.200000\du)--(-21.300000\du,6.600000\du)--(-11.822500\du,6.600000\du)--(-11.822500\du,6.200000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-21.300000\du,6.200000\du)--(-21.300000\du,6.600000\du)--(-11.822500\du,6.600000\du)--(-11.822500\du,6.200000\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
@@ -90,18 +78,18 @@
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-16.561250\du,6.600000\du)--(-16.561250\du,7.850000\du);
+\draw (-16.561300\du,5.800000\du)--(-16.561300\du,7.900000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-16.561250\du,10.850000\du)--(-16.561250\du,11.900000\du);
+\draw (-16.561300\du,10.900000\du)--(-16.561300\du,12.000000\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-16.911250\du,7.850000\du)--(-16.911250\du,10.850000\du)--(-16.211250\du,10.850000\du)--(-16.211250\du,7.850000\du)--cycle;
+\fill (-16.911300\du,7.900000\du)--(-16.911300\du,10.900000\du)--(-16.211300\du,10.900000\du)--(-16.211300\du,7.900000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-16.911250\du,7.850000\du)--(-16.911250\du,10.850000\du)--(-16.211250\du,10.850000\du)--(-16.211250\du,7.850000\du)--cycle;
+\draw (-16.911300\du,7.900000\du)--(-16.911300\du,10.900000\du)--(-16.211300\du,10.900000\du)--(-16.211300\du,7.900000\du)--cycle;
 \pgfsetlinewidth{0.100000\du}
 \pgfsetbuttcap
 \pgfsetdash{}{0pt}
@@ -112,16 +100,16 @@
 \pgfsetarrowsstart{latex}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-17.493750\du,8.250000\du)--(-27.500000\du,8.200000\du);
+\draw (-17.493800\du,8.250000\du)--(-27.500000\du,8.200000\du);
 }
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-22.618750\du,7.775000\du){Demande de complétion};
+\node at (-22.618800\du,7.775000\du){Demande de complétion};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-15.550000\du,9.400000\du){Filtrage des données};
+\node[anchor=west] at (-15.600000\du,9.450000\du){Filtrage des données};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetbuttcap
 \pgfsetdash{}{0pt}
@@ -129,13 +117,22 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{dialinecolor}
 % was here!!!
-\pgfsetarrowsstart{latex}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-27.500000\du,10.600000\du)--(-17.593750\du,10.550000\du);
+\draw (-27.500000\du,10.600000\du)--(-17.593800\du,10.550000\du);
 }
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-27.500000\du,10.600000\du)--(-17.593800\du,10.550000\du);
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\pgfsetbuttcap
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-26.701272\du,10.345965\du)--(-27.500000\du,10.600000\du)--(-27.500000\du,10.600000\du);
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-22.368750\du,10.125000\du){Envoi des données};
+\node at (-22.368800\du,10.125000\du){Envoi des données};
 \end{tikzpicture}
