--- a/report/draw/multiple_doc_completion.tex
+++ b/report/draw/multiple_doc_completion.tex
@@ -1,8 +1,8 @@
 % Graphic for TeX using PGF
-% Title: D:\INSA\3INFO\PROJETINFO\diagrammes dia\multiple_doc_completion.mts
-% Creator: Dia v0.97.2
-% CreationDate: Wed Apr 22 11:42:34 2015
-% For: Utilisateur
+% Title: /home/maximilien/INSA/alambic/report/draw/multiple_doc_completion.dia
+% Creator: Dia v0.97.3
+% CreationDate: Wed Apr 29 09:27:53 2015
+% For: maximilien
 % \usepackage{tikz}
 % The following commands are not supported in PSTricks at present
 % We define them conditionally, so when they are implemented,
@@ -22,168 +22,103 @@
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\pgfpathellipse{\pgfpoint{-44.150000\du}{2.150000\du}}{\pgfpoint{0.300000\du}{0\du}}{\pgfpoint{0\du}{0.300000\du}}
+\pgfpathellipse{\pgfpoint{-28.150000\du}{2.050000\du}}{\pgfpoint{0.300000\du}{0\du}}{\pgfpoint{0\du}{0.300000\du}}
 \pgfusepath{fill}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\pgfpathellipse{\pgfpoint{-44.150000\du}{2.150000\du}}{\pgfpoint{0.300000\du}{0\du}}{\pgfpoint{0\du}{0.300000\du}}
+\pgfpathellipse{\pgfpoint{-28.150000\du}{2.050000\du}}{\pgfpoint{0.300000\du}{0\du}}{\pgfpoint{0\du}{0.300000\du}}
 \pgfusepath{stroke}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-45.350000\du,2.750000\du)--(-42.950000\du,2.750000\du);
+\draw (-29.350000\du,2.650000\du)--(-26.950000\du,2.650000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-44.150000\du,2.450000\du)--(-44.150000\du,3.950000\du);
+\draw (-28.150000\du,2.350000\du)--(-28.150000\du,3.850000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-44.150000\du,3.950000\du)--(-45.350000\du,5.250000\du);
+\draw (-28.150000\du,3.850000\du)--(-29.350000\du,5.150000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-44.150000\du,3.950000\du)--(-42.950000\du,5.250000\du);
+\draw (-28.150000\du,3.850000\du)--(-26.950000\du,5.150000\du);
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-44.150000\du,6.445000\du){Utilisateur};
+\node at (-28.150000\du,6.345000\du){Utilisateur};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-25.500000\du,4.550000\du)--(-25.500000\du,5.950000\du)--(-16.022500\du,5.950000\du)--(-16.022500\du,4.550000\du)--cycle;
+\fill (-16.300000\du,4.400000\du)--(-16.300000\du,5.800000\du)--(-6.822500\du,5.800000\du)--(-6.822500\du,4.400000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-25.500000\du,4.550000\du)--(-25.500000\du,5.950000\du)--(-16.022500\du,5.950000\du)--(-16.022500\du,4.550000\du)--cycle;
+\draw (-16.300000\du,4.400000\du)--(-16.300000\du,5.800000\du)--(-6.822500\du,5.800000\du)--(-6.822500\du,4.400000\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-20.761250\du,5.500000\du){CompletionProvider};
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-25.500000\du,5.950000\du)--(-25.500000\du,6.350000\du)--(-16.022500\du,6.350000\du)--(-16.022500\du,5.950000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-25.500000\du,5.950000\du)--(-25.500000\du,6.350000\du)--(-16.022500\du,6.350000\du)--(-16.022500\du,5.950000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-25.500000\du,6.350000\du)--(-25.500000\du,6.750000\du)--(-16.022500\du,6.750000\du)--(-16.022500\du,6.350000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-25.500000\du,6.350000\du)--(-25.500000\du,6.750000\du)--(-16.022500\du,6.750000\du)--(-16.022500\du,6.350000\du)--cycle;
+\node at (-11.561250\du,5.350000\du){CompletionProvider};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-44.150000\du,6.650000\du)--(-44.150000\du,8.087500\du);
+\draw (-27.950000\du,6.700000\du)--(-27.950000\du,7.400000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-44.150000\du,10.087500\du)--(-44.150000\du,19.937500\du);
+\draw (-27.950000\du,9.400000\du)--(-27.950000\du,19.000000\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-44.500000\du,8.087500\du)--(-44.500000\du,10.087500\du)--(-43.800000\du,10.087500\du)--(-43.800000\du,8.087500\du)--cycle;
+\fill (-28.300000\du,7.400000\du)--(-28.300000\du,9.400000\du)--(-27.600000\du,9.400000\du)--(-27.600000\du,7.400000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-44.500000\du,8.087500\du)--(-44.500000\du,10.087500\du)--(-43.800000\du,10.087500\du)--(-43.800000\du,8.087500\du)--cycle;
+\draw (-28.300000\du,7.400000\du)--(-28.300000\du,9.400000\du)--(-27.600000\du,9.400000\du)--(-27.600000\du,7.400000\du)--cycle;
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-40.300000\du,4.500000\du)--(-40.300000\du,5.900000\du)--(-34.655000\du,5.900000\du)--(-34.655000\du,4.500000\du)--cycle;
+\fill (-23.700000\du,4.350000\du)--(-23.700000\du,5.750000\du)--(-18.612500\du,5.750000\du)--(-18.612500\du,4.350000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-40.300000\du,4.500000\du)--(-40.300000\du,5.900000\du)--(-34.655000\du,5.900000\du)--(-34.655000\du,4.500000\du)--cycle;
+\draw (-23.700000\du,4.350000\du)--(-23.700000\du,5.750000\du)--(-18.612500\du,5.750000\du)--(-18.612500\du,4.350000\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-37.477500\du,5.450000\du){Document1};
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-40.300000\du,5.900000\du)--(-40.300000\du,6.300000\du)--(-34.655000\du,6.300000\du)--(-34.655000\du,5.900000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-40.300000\du,5.900000\du)--(-40.300000\du,6.300000\du)--(-34.655000\du,6.300000\du)--(-34.655000\du,5.900000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-40.300000\du,6.300000\du)--(-40.300000\du,6.700000\du)--(-34.655000\du,6.700000\du)--(-34.655000\du,6.300000\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-40.300000\du,6.300000\du)--(-40.300000\du,6.700000\du)--(-34.655000\du,6.700000\du)--(-34.655000\du,6.300000\du)--cycle;
+\node at (-21.156250\du,5.300000\du){Document};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-20.761250\du,6.750000\du)--(-20.761250\du,11.237500\du);
+\draw (-21.000000\du,5.900000\du)--(-21.000000\du,9.405599\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-20.761250\du,14.237500\du)--(-20.761250\du,15.137500\du);
+\draw (-21.000000\du,11.405599\du)--(-21.000000\du,13.450000\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-21.111250\du,11.237500\du)--(-21.111250\du,14.237500\du)--(-20.411250\du,14.237500\du)--(-20.411250\du,11.237500\du)--cycle;
+\fill (-21.350000\du,9.405599\du)--(-21.350000\du,11.405599\du)--(-20.650000\du,11.405599\du)--(-20.650000\du,9.405599\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-21.111250\du,11.237500\du)--(-21.111250\du,14.237500\du)--(-20.411250\du,14.237500\du)--(-20.411250\du,11.237500\du)--cycle;
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-32.498750\du,4.542500\du)--(-32.498750\du,5.942500\du)--(-26.853750\du,5.942500\du)--(-26.853750\du,4.542500\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-32.498750\du,4.542500\du)--(-32.498750\du,5.942500\du)--(-26.853750\du,5.942500\du)--(-26.853750\du,4.542500\du)--cycle;
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\node at (-29.676250\du,5.492500\du){Document2};
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-32.498750\du,5.942500\du)--(-32.498750\du,6.342500\du)--(-26.853750\du,6.342500\du)--(-26.853750\du,5.942500\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-32.498750\du,5.942500\du)--(-32.498750\du,6.342500\du)--(-26.853750\du,6.342500\du)--(-26.853750\du,5.942500\du)--cycle;
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-32.498750\du,6.342500\du)--(-32.498750\du,6.742500\du)--(-26.853750\du,6.742500\du)--(-26.853750\du,6.342500\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-32.498750\du,6.342500\du)--(-32.498750\du,6.742500\du)--(-26.853750\du,6.742500\du)--(-26.853750\du,6.342500\du)--cycle;
+\draw (-21.350000\du,9.405599\du)--(-21.350000\du,11.405599\du)--(-20.650000\du,11.405599\du)--(-20.650000\du,9.405599\du)--cycle;
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-37.477500\du,6.700000\du)--(-37.477500\du,8.087500\du);
+\draw (-11.411300\du,5.950000\du)--(-11.411300\du,11.405599\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-37.477500\du,12.087500\du)--(-37.477500\du,12.587500\du);
+\draw (-11.411300\du,12.905599\du)--(-11.411300\du,19.000000\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-37.827500\du,8.087500\du)--(-37.827500\du,12.087500\du)--(-37.127500\du,12.087500\du)--(-37.127500\du,8.087500\du)--cycle;
+\fill (-11.761300\du,11.405599\du)--(-11.761300\du,12.905599\du)--(-11.061300\du,12.905599\du)--(-11.061300\du,11.405599\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-37.827500\du,8.087500\du)--(-37.827500\du,12.087500\du)--(-37.127500\du,12.087500\du)--(-37.127500\du,8.087500\du)--cycle;
-\pgfsetlinewidth{0.050000\du}
-\pgfsetdash{}{0pt}
-\pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-29.676250\du,6.742500\du)--(-29.676250\du,13.887500\du);
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-29.676250\du,17.887500\du)--(-29.676250\du,19.937500\du);
-\pgfsetlinewidth{0.100000\du}
-\pgfsetdash{}{0pt}
-\definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
-\pgfsetfillcolor{dialinecolor}
-\fill (-30.026250\du,13.887500\du)--(-30.026250\du,17.887500\du)--(-29.326250\du,17.887500\du)--(-29.326250\du,13.887500\du)--cycle;
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-30.026250\du,13.887500\du)--(-30.026250\du,17.887500\du)--(-29.326250\du,17.887500\du)--(-29.326250\du,13.887500\du)--cycle;
+\draw (-11.761300\du,11.405599\du)--(-11.761300\du,12.905599\du)--(-11.061300\du,12.905599\du)--(-11.061300\du,11.405599\du)--cycle;
 \pgfsetlinewidth{0.100000\du}
 \pgfsetbuttcap
 \pgfsetdash{}{0pt}
@@ -194,24 +129,16 @@
 \pgfsetarrowsstart{latex}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-38.222300\du,8.487500\du)--(-43.672300\du,8.487500\du);
+\draw (-21.350000\du,9.405600\du)--(-27.600000\du,9.400000\du);
 }
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-40.872300\du,8.087500\du){Ouvrir document};
+\node at (-24.550000\du,8.852800\du){Ouvrir document};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-36.772300\du,9.287500\du){Analyse des données};
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-19.972300\du,12.937500\du){Mise à jour};
-% setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-19.972300\du,13.737500\du){des données};
+\node[anchor=west] at (-20.300000\du,10.200000\du){Analyse du document};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetbuttcap
 \pgfsetdash{}{0pt}
@@ -219,35 +146,53 @@
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{dialinecolor}
 % was here!!!
-\pgfsetarrowsstart{latex}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-21.772300\du,11.437500\du)--(-36.922300\du,11.487500\du);
+\draw (-11.761300\du,11.405599\du)--(-20.650000\du,11.405600\du);
 }
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-11.761300\du,11.405599\du)--(-20.650000\du,11.405600\du);
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\pgfsetbuttcap
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-12.561300\du,11.655599\du)--(-11.761300\du,11.405599\du)--(-11.761300\du,11.405599\du);
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-28.922300\du,11.087500\du){Envoi des données};
+\node at (-16.350000\du,12.205600\du){Envoi des données};
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node[anchor=west] at (-10.550000\du,11.900000\du){Mise à jour des données};
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node[anchor=west] at (-10.550000\du,12.700000\du){de complétion};
 \pgfsetlinewidth{0.050000\du}
 \pgfsetdash{}{0pt}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-37.477500\du,12.087500\du)--(-37.477500\du,13.887500\du);
+\draw (-21.000000\du,12.450000\du)--(-21.000000\du,12.950000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-37.477500\du,15.887500\du)--(-37.477500\du,19.887500\du);
+\draw (-21.000000\du,16.950000\du)--(-21.000000\du,18.950000\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-37.827500\du,13.887500\du)--(-37.827500\du,15.887500\du)--(-37.127500\du,15.887500\du)--(-37.127500\du,13.887500\du)--cycle;
+\fill (-21.350000\du,12.950000\du)--(-21.350000\du,16.950000\du)--(-20.650000\du,16.950000\du)--(-20.650000\du,12.950000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-37.827500\du,13.887500\du)--(-37.827500\du,15.887500\du)--(-37.127500\du,15.887500\du)--(-37.127500\du,13.887500\du)--cycle;
+\draw (-21.350000\du,12.950000\du)--(-21.350000\du,16.950000\du)--(-20.650000\du,16.950000\du)--(-20.650000\du,12.950000\du)--cycle;
 \pgfsetlinewidth{0.100000\du}
 \pgfsetbuttcap
 \pgfsetdash{}{0pt}
+\pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 {
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetfillcolor{dialinecolor}
@@ -255,55 +200,69 @@
 \pgfsetarrowsstart{latex}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-30.372300\du,14.537500\du)--(-36.827300\du,14.542500\du);
+\draw (-20.650000\du,12.950000\du)--(-11.761300\du,12.905599\du);
 }
 % setfont left to latex
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\node at (-33.524800\du,14.140000\du){Ouverture arrire plan};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-28.877300\du,15.637500\du){Analyse des données};
-\pgfsetlinewidth{0.100000\du}
-\pgfsetbuttcap
-\pgfsetdash{}{0pt}
-{
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetfillcolor{dialinecolor}
-% was here!!!
-\pgfsetarrowsstart{latex}
-\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
-\pgfsetstrokecolor{dialinecolor}
-\draw (-21.472300\du,17.537500\du)--(-28.977191\du,17.542500\du);
-}
+\node[anchor=west] at (-10.600000\du,17.715600\du){Mise à jour des données};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (-25.324746\du,17.215000\du){Envoi des données};
+\node[anchor=west] at (-10.600000\du,18.515600\du){de complétion};
 \pgfsetlinewidth{0.050000\du}
-\pgfsetdash{}{0pt}
+\pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \pgfsetdash{{0.400000\du}{0.400000\du}}{0\du}
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-20.761250\du,14.237500\du)--(-20.761250\du,16.837500\du);
+\draw (-11.411300\du,12.905599\du)--(-11.411300\du,16.950000\du);
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-20.761250\du,19.837500\du)--(-20.761250\du,20.337500\du);
+\draw (-11.411300\du,18.450000\du)--(-11.411300\du,19.055599\du);
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (-21.111250\du,16.837500\du)--(-21.111250\du,19.837500\du)--(-20.411250\du,19.837500\du)--(-20.411250\du,16.837500\du)--cycle;
+\fill (-11.761300\du,16.950000\du)--(-11.761300\du,18.450000\du)--(-11.061300\du,18.450000\du)--(-11.061300\du,16.950000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (-21.111250\du,16.837500\du)--(-21.111250\du,19.837500\du)--(-20.411250\du,19.837500\du)--(-20.411250\du,16.837500\du)--cycle;
+\draw (-11.761300\du,16.950000\du)--(-11.761300\du,18.450000\du)--(-11.061300\du,18.450000\du)--(-11.061300\du,16.950000\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-19.877300\du,18.487500\du){Mise à jour};
+\node[anchor=west] at (-20.150000\du,14.465600\du){Cherche des fichiers .tex};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (-19.877300\du,19.287500\du){des données};
+\node[anchor=west] at (-20.150000\du,15.265600\du){dans le même dossier};
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node[anchor=west] at (-20.150000\du,16.065600\du){et les analyse};
+\pgfsetlinewidth{0.100000\du}
+\pgfsetbuttcap
+\pgfsetdash{}{0pt}
+{
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetfillcolor{dialinecolor}
+% was here!!!
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-11.761300\du,16.950000\du)--(-20.650000\du,16.950000\du);
+}
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-11.761300\du,16.950000\du)--(-20.650000\du,16.950000\du);
+\pgfsetlinewidth{0.100000\du}
+\pgfsetdash{}{0pt}
+\pgfsetmiterjoin
+\pgfsetbuttcap
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\draw (-12.561300\du,17.200000\du)--(-11.761300\du,16.950000\du)--(-11.761300\du,16.950000\du);
+% setfont left to latex
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node at (-16.300000\du,17.935000\du){Envoi des données};
 \end{tikzpicture}
