--- a/report/draw/uml_completion_structure.tex
+++ b/report/draw/uml_completion_structure.tex
@@ -1,7 +1,7 @@
 % Graphic for TeX using PGF
 % Title: /home/maximilien/INSA/alambic/report/draw/uml_completion_structure.dia
 % Creator: Dia v0.97.3
-% CreationDate: Sun Apr 19 22:18:30 2015
+% CreationDate: Wed Apr 29 09:30:33 2015
 % For: maximilien
 % \usepackage{tikz}
 % The following commands are not supported in PSTricks at present
@@ -22,20 +22,20 @@
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (1.100000\du,1.450000\du)--(1.100000\du,23.600000\du)--(19.850000\du,23.600000\du)--(19.850000\du,1.450000\du)--cycle;
+\fill (1.100000\du,1.650000\du)--(1.100000\du,23.800000\du)--(19.850000\du,23.800000\du)--(19.850000\du,1.650000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (1.100000\du,1.450000\du)--(1.100000\du,23.600000\du)--(19.850000\du,23.600000\du)--(19.850000\du,1.450000\du)--cycle;
+\draw (1.100000\du,1.650000\du)--(1.100000\du,23.800000\du)--(19.850000\du,23.800000\du)--(19.850000\du,1.650000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (1.100000\du,0.450000\du)--(1.100000\du,1.450000\du)--(8.230000\du,1.450000\du)--(8.230000\du,0.450000\du)--cycle;
+\fill (1.100000\du,0.650000\du)--(1.100000\du,1.650000\du)--(8.230000\du,1.650000\du)--(8.230000\du,0.650000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (1.100000\du,0.450000\du)--(1.100000\du,1.450000\du)--(8.230000\du,1.450000\du)--(8.230000\du,0.450000\du)--cycle;
+\draw (1.100000\du,0.650000\du)--(1.100000\du,1.650000\du)--(8.230000\du,1.650000\du)--(8.230000\du,0.650000\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (1.200000\du,1.200000\du){CompletionProvider};
+\node[anchor=west] at (1.200000\du,1.300000\du){CompletionProvider};
 \pgfsetlinewidth{0.150000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
@@ -65,7 +65,7 @@
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (2.375000\du,6.150000\du){+package: string?};
+\node[anchor=west] at (2.375000\du,6.050000\du){+package: string?};
 \pgfsetlinewidth{0.150000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
@@ -95,7 +95,7 @@
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (5.300000\du,13.745000\du){+optional: bool};
+\node[anchor=west] at (5.300000\du,13.645000\du){+optional: bool};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
@@ -106,66 +106,72 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (10.186250\du,9.969747\du)--(10.186250\du,7.897500\du)--(7.261250\du,7.897500\du)--(7.261250\du,6.525253\du);
+\draw (10.186234\du,9.969720\du)--(10.186222\du,8.350000\du)--(7.261250\du,8.350000\du)--(7.261250\du,6.523779\du);
 }
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (10.186250\du,8.711168\du)--(10.186250\du,7.897500\du)--(7.261250\du,7.897500\du)--(7.261250\du,6.525253\du);
+\draw (10.186225\du,8.711141\du)--(10.186222\du,8.350000\du)--(7.261250\du,8.350000\du)--(7.261250\du,6.523779\du);
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \pgfsetbuttcap
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (10.186250\du,9.969747\du)--(9.946250\du,9.269747\du)--(10.186250\du,8.569747\du)--(10.426250\du,9.269747\du)--cycle;
+\fill (10.186234\du,9.969720\du)--(9.946229\du,9.269722\du)--(10.186224\du,8.569720\du)--(10.426229\du,9.269718\du)--cycle;
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \pgfsetbuttcap
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (10.186250\du,9.969747\du)--(9.946250\du,9.269747\du)--(10.186250\du,8.569747\du)--(10.426250\du,9.269747\du)--cycle;
+\draw (10.186234\du,9.969720\du)--(9.946229\du,9.269722\du)--(10.186224\du,8.569720\du)--(10.426229\du,9.269718\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (8.723750\du,7.747500\du){args};
+\node at (8.723736\du,8.000000\du){args};
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node[anchor=west] at (10.736234\du,9.769720\du){0,n};
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node[anchor=west] at (7.461250\du,7.123779\du){0,n};
 \pgfsetlinewidth{0.150000\du}
 \pgfsetdash{}{0pt}
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (10.375000\du,17.345000\du)--(10.375000\du,19.545000\du)--(19.345000\du,19.545000\du)--(19.345000\du,17.345000\du)--cycle;
+\fill (10.375000\du,17.745000\du)--(10.375000\du,19.945000\du)--(19.345000\du,19.945000\du)--(19.345000\du,17.745000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (10.375000\du,17.345000\du)--(10.375000\du,19.545000\du)--(19.345000\du,19.545000\du)--(19.345000\du,17.345000\du)--cycle;
+\draw (10.375000\du,17.745000\du)--(10.375000\du,19.945000\du)--(19.345000\du,19.945000\du)--(19.345000\du,17.745000\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (14.860000\du,18.145000\du){<<Choice>>};
+\node at (14.860000\du,18.545000\du){<<Choice>>};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (14.860000\du,19.095000\du){CompletionChaice};
+\node at (14.860000\du,19.495000\du){CompletionChoice};
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (10.375000\du,19.545000\du)--(10.375000\du,22.945000\du)--(19.345000\du,22.945000\du)--(19.345000\du,19.545000\du)--cycle;
+\fill (10.375000\du,19.945000\du)--(10.375000\du,23.345000\du)--(19.345000\du,23.345000\du)--(19.345000\du,19.945000\du)--cycle;
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (10.375000\du,19.545000\du)--(10.375000\du,22.945000\du)--(19.345000\du,22.945000\du)--(19.345000\du,19.545000\du)--cycle;
+\draw (10.375000\du,19.945000\du)--(10.375000\du,23.345000\du)--(19.345000\du,23.345000\du)--(19.345000\du,19.945000\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (10.550000\du,20.245000\du){+name: string};
+\node[anchor=west] at (10.550000\du,20.645000\du){+name: string};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (10.550000\du,21.045000\du){+package: string?};
+\node[anchor=west] at (10.550000\du,21.445000\du){+package: string?};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (10.550000\du,21.845000\du){+insert: string?};
+\node[anchor=west] at (10.550000\du,22.245000\du){+insert: string?};
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node[anchor=west] at (10.550000\du,22.645000\du){+insert\_after: string?};
+\node[anchor=west] at (10.550000\du,22.905000\du){+insert\_after: string?};
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
@@ -176,26 +182,32 @@
 % was here!!!
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (14.860000\du,17.269649\du)--(14.860000\du,15.344951\du)--(10.186250\du,15.344951\du)--(10.186250\du,14.120253\du);
+\draw (14.860000\du,17.670292\du)--(14.860000\du,16.100000\du)--(10.186225\du,16.100000\du)--(10.186237\du,14.112100\du);
 }
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (14.860000\du,16.011070\du)--(14.860000\du,15.344951\du)--(10.186250\du,15.344951\du)--(10.186250\du,14.120253\du);
+\draw (14.860000\du,16.411713\du)--(14.860000\du,16.100000\du)--(10.186225\du,16.100000\du)--(10.186237\du,14.112100\du);
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \pgfsetbuttcap
 \definecolor{dialinecolor}{rgb}{1.000000, 1.000000, 1.000000}
 \pgfsetfillcolor{dialinecolor}
-\fill (14.860000\du,17.269649\du)--(14.620000\du,16.569649\du)--(14.860000\du,15.869649\du)--(15.100000\du,16.569649\du)--cycle;
+\fill (14.860000\du,17.670292\du)--(14.620000\du,16.970292\du)--(14.860000\du,16.270292\du)--(15.100000\du,16.970292\du)--cycle;
 \pgfsetlinewidth{0.100000\du}
 \pgfsetdash{}{0pt}
 \pgfsetmiterjoin
 \pgfsetbuttcap
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\draw (14.860000\du,17.269649\du)--(14.620000\du,16.569649\du)--(14.860000\du,15.869649\du)--(15.100000\du,16.569649\du)--cycle;
+\draw (14.860000\du,17.670292\du)--(14.620000\du,16.970292\du)--(14.860000\du,16.270292\du)--(15.100000\du,16.970292\du)--cycle;
 % setfont left to latex
 \definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
 \pgfsetstrokecolor{dialinecolor}
-\node at (12.523125\du,15.194951\du){choices};
+\node at (12.523112\du,15.600000\du){choices};
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node[anchor=west] at (15.410000\du,17.470292\du){0,n};
+\definecolor{dialinecolor}{rgb}{0.000000, 0.000000, 0.000000}
+\pgfsetstrokecolor{dialinecolor}
+\node[anchor=west] at (10.386237\du,14.712100\du){0,n};
 \end{tikzpicture}
